--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
-  <div id="app">测试css文件</div>
+  <div id="app">缓存测试</div>
   <img src="/static/image/cat.jpeg" alt="">
 </body>
 </html>
